2003-11-13  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* src/jtagrw.cc (memorySpace): Use symbolic name instead of magic
	number.
	* src/remote.cc (talkToGdb): Only allow orphaned bytes when writing to
	program space. [Thanks to Brian Cuthie <brian@systemix.com> for 
	reporting this bug.]

2003-11-08  Theodore A. Roth  <troth@openavr.org>

	* src/main.cc (usage): Make the -B option info fit on a 80 column
	terminal.

2003-11-08  Theodore A. Roth  <troth@openavr.org>
[Thanks to Nils Kristian Strom <nilsst@omegav.ntnu.no>]

	* configure.ac (AC_INIT): Bump version.
	* src/jtagio.cc (initJtagBox): Inform user about the lock bits and
	fuses that actually *are* programmed, not the ones that were found in
	the device.

2003-11-01  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* src/jtag.h: Add JTAG_BITRATE_1_MHz, JTAG_BITRATE_500_KHz,
	JTAG_BITRATE_250_KHz and JTAG_BITRATE_125_KHz defs.
	(initJtagBox): Add bitrate argument.
	* src/jtagio.cc (initJtagBox): Allow passing the jtag bitrate.
	* src/main.cc: Add the -B (--jtag-bitrate) option.

2003-10-23  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* doc/dev_desc.txt: New file.
	* src/jtag.h:
	* src/jtagio.cc:
	Make the device description arrays into a structures.

2003-10-20  Theodore A. Roth  <troth@openavr.org>
[Thanks to Dean Ferreyra <dferreyra@igc.org>]

	* configure.ac (AC_INIT): Bump version.
	* src/main.cc: Fix to allow erasing the device as a single operation.

2003-09-25  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* doc/Makefile.am (EXTRA_DIST): Add the .txt files.
	* doc/README.cygwin: New file, from Eric Weddington.

2003-09-18  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* avarice.spec.in: Add man pages.

2003-09-18  Theodore A. Roth  <troth@openavr.org>
[Thanks to Amedee Louis Beaudoin <deoxy@u.washington.edu>]
